BSAF-33 fix button color in dark mode to be slightly less dark

--- a/apps/desktop/src/scss/variables.scss
+++ b/apps/desktop/src/scss/variables.scss
@@ -38,7 +38,7 @@ $border-color-alt: #c3c5c7;
 $button-border-color: darken($border-color-dark, 12%);
 $button-background-color: white;
 $button-color: lighten($text-color, 40%);
-$button-color-primary: darken($brand-primary, 8%);
+$button-color-primary: darken($brand-primary, 1%);
 $button-color-danger: darken($brand-danger, 10%);
 
 $code-color: #e83e8c;
